修改语言，登陆在最开始

--- a/MOWOX/en.lproj/Localizable.strings
+++ b/MOWOX/en.lproj/Localizable.strings
@@ -279,3 +279,4 @@
 "Model2:" = "Model2:";
 "LCD Version" = "LCD Version";
 "1.Turn on your Robot\n2.Change the interface as shown and press “OK”the text “Network Configuration...”will appear.\n3.Press the “CONNECT” button" = "1.Turn on your Robot\n2.Change the interface as shown and press “OK”the text “Network Configuration...”will appear.\n3.Press the “CONNECT” button";
+"Waiting time after rain" = "Waiting time after rain";
