--- a/MOWOX/de.lproj/Localizable.strings
+++ b/MOWOX/de.lproj/Localizable.strings
@@ -255,5 +255,6 @@
 "Fri" = "Fr";
 "Sat" = "Sa";
 "Sun" = "So";
-"Are you sure to back to station?" = "Bist du sicher,dass du zurück zum Bahnhof kommst?";
-"Are you sure to go to work?" = "Bist du sicher,dass du zur Arbeit gehen wirst?";
+"Are you sure to back to station?" = "Zur Station";
+"Are you sure to go to work?" = "Mähbetrieb starten";
+"Waiting time after rain" = "Wartezeit nach Regenende";
